# Langchain_basic

./: .gitignore  README.md  main.py  pyproject.toml
MCP/: EXPLAIN.md  mcp_multi_client.py  odd_math_server.py  weather_server.py
RAG/: 1_rag_basic.ipynb  2_rag_basic.ipynb  4_rag_testdata_synthetic.ipynb  5_rag_eval_ragas.ipynb  rag_practice.ipynb  rag_project.ipynb  report_2024_test.csv  report_2024_test.xlsx
agent_langchain/: 0_decorator.ipynb  1_agent_basic.ipynb  2_agent_binding.ipynb  3_agent_custom.ipynb  4_agent_toolkit_test.ipynb
agent_langchain/dolmary_schedule_toolkit/: __init__.py  toolkit.py  tools.py
agent_result/: 20251016.csv  new.db
basic/: 1_langchain_basic.ipynb  2_langchain_lcel_basic_1.ipynb  3_langchain_lcel_basic_2.ipynb
data/: npc_persona.txt
langgraph/: 1_langgraph_basic.ipynb  2_langgraph_tool.ipynb  3_langgraph_replan.ipynb
loader_splitter/: 1_loader_splitter_basic.ipynb  2_image_pdf_loader.ipynb  3_text_loader.ipynb  3_unstructed_tesseract_ocr.ipynb
memory/: 1_1_history_basic.ipynb  1_2_history_basic_remind.ipynb  2_window_history.ipynb  3_conversation_history.ipynb  4_summary_history.ipynb  5_profile_history.ipynb  6_sqlite_history.ipynb  7_sqlite_history_conversation.ipynb  chat_history.db
outputparser/: 1_str_outputparser.ipynb  2_comma_outputparser.ipynb  3_json_outputparser.ipynb  4_pydantic_outputparser.ipynb
prompt/: 1_prompt_basic.ipynb  2_chatprompt.ipynb  3_fewshotprompt.ipynb  best_template.yaml
retriever_reranker/: 1_retriever_basic.ipynb  2_retriever_advanced.ipynb
vectorStore/: chroma.ipynb  faiss.ipynb
